# casual-pre-loader-cpp

./: .gitignore  LICENSE  README.md  run.bat
backup/particles/: blood_trail.pcf  blood_trail_dx80.pcf  class_fx_dx80.pcf  drg_pyro.pcf  drg_pyro_dx80.pcf  flamethrower_high.pcf  halloween2019_unusuals.pcf  halloween2020_unusuals.pcf  halloween2021_unusuals.pcf  halloween2023_unusuals.pcf  halloween2024_unusuals.pcf  halloween2025_unusuals.pcf  invasion_ray_gun_fx.pcf  item_fx.pcf  killstreak.pcf  medicgun_beam.pcf  medicgun_beam_dx80.pcf  mvm.pcf  rocketpack.pcf  rockettrail.pcf  rockettrail_dx80.pcf  smissmas2019_unusuals.pcf  smissmas2020_unusuals.pcf  smissmas2021_unusuals.pcf  smissmas2023_unusuals.pcf  summer2021_unusuals.pcf  summer2022_unusuals.pcf  summer2024_unusuals.pcf  summer2025_unusuals.pcf  weapon_unusual_cool.pcf  weapon_unusual_hot.pcf  weapon_unusual_isotope.pcf
backup/scripts/: game_sounds_manifest.txt  game_sounds_mvm.txt  game_sounds_og.txt  game_sounds_physics.txt  game_sounds_player.txt  game_sounds_taunt_workshop.txt  game_sounds_weapons.txt  mvm_level_sound_tweaks.txt  mvm_level_sounds.txt  soundscapes.txt  soundscapes_2fort.txt  soundscapes_badlands.txt  soundscapes_barnblitz.txt  soundscapes_cactusvalley.txt  soundscapes_cp_coldfront.txt  soundscapes_egypt.txt  (+31 more)
cpp_src/: BUILD.md  CMakeLists.txt  INTEGRATION.md
cpp_src/include/: casual_pre_loader.h
cpp_src/include/argparse/: argparse.hpp
cpp_src/include/nlohmann/: json.hpp
cpp_src/src/: main.cpp
cpp_src/src/core/: BackupManager.cpp  BackupManager.hpp  ConfigLoader.cpp  ConfigLoader.hpp  ModManager.cpp  ModManager.hpp  PCFHandler.cpp  PCFHandler.hpp  VPKHandler.cpp  VPKHandler.hpp
cpp_src/src/utils/: BinaryStream.hpp  Logger.cpp  Logger.hpp
cpp_src/tests/: CMakeLists.txt  main_test.cpp
scripts/: run.sh
(+29 files in other folders)
